Fix crash when closing Krita while Calligraphy Tool is active

m_lastShape is not used anymore, so we can just ignore it.

BUG:496257