plugins/tools/karbonplugins/tools/CalligraphyTool/KarbonCalligraphyTool.h
@@ -95,9 +95,6 @@ private:
     // dynamic parameters
     QPointF m_speed; // used as a vector
 
-    // last calligraphic shape drawn, if any
-    KarbonCalligraphicShape *m_lastShape;
-
     KarbonCalligraphyOptionWidget *m_widget {0};
 };
 
